examples/type_system/failing/182_list_comprehension_missing_left_arrow.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/182_list_comprehension_missing_left_arrow.flx
// error[E034]: Missing Generator Name
//
// Expected generator identifier before `<-` in list comprehension.
//
//   examples/type_system/failing/182_list_comprehension_missing_left_arrow.flx:20:15
//    |
// 20 | let xs = [x | <- [1, 2, 3]]
//    |               ^^
//
// Hint:
//   List comprehensions use `[expr | name <- source, ...]`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

let xs = [x | <- [1, 2, 3]]
let after = 1
